# Hickory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements-special.txt  requirements.txt
docker/: entrypoint.sh
hickory/: __init__.py
hickory/align/: calculate_centroid.py  clipper_solve.py  evaluate_clipper_transform.py
hickory/mapping/: __init__.py  extraction_common.py  extraction_utils.py  scene_extractor.py
hickory/navigation/: __init__.py  common.py  geometry.py  interactive_scene_rrt_3d.py  planner_3d.py  planning_core.py  scene_planning_core.py
hickory/sq/: __init__.py  expansion.py  fitting.py
hickory/utils/: __init__.py  frame_conventions.py  third_party.py
hickory/visualization/: __init__.py  alignment.py  scene.py
params/: b2_zed.yaml
params/HOPE/: data.yaml  fastsam.yaml  mapper.yaml
params/NUS-CLB/: fastsam.yaml  mapper.yaml  offline_rpgo.yaml  submap_align.yaml
params/REPLICA/: fastsam.yaml  gt_pose.yaml  mapper.yaml
