[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hickory"
version = "0.1.0"
description = "Object-centric scene reconstruction, alignment, and navigation research code."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["hickory*"]
